# Purdue

./: README.md
CS159_Spring2021/CS159/: README
ECE_20875/: README.md
ECE_20875/homework-1-f22-roshsundar/: Problem1.py  Problem2.py
ECE_20875/homework-10-f22-roshsundar/: README.md  hw10.py  utils.py
ECE_20875/homework-2-f22-roshsundar/: homework2.py  testhisto1.py  testhisto2.py  testhisto3.py  testhisto4.py  testname1.py  testname2.py
ECE_20875/homework-3-f22-roshsundar/: Problem1.py  Problem2.py  README.md  testbin.py
ECE_20875/homework-4-f22-roshsundar/: README.md  problem1.py  problem2.py
ECE_20875/homework-5-f22-roshsundar/: README.md  Writeup.docx  engagement_0.txt  engagement_1.txt  problem1.py  problem2.py  ~$riteup.docx
ECE_20875/homework-6-f22-roshsundar/: README.md  problems.py  test_problems.py
ECE_20875/homework-7-f22-roshsundar/: AAPL.csv  GOOG.csv  README.md  poly.txt  polyfit.py  problem1&2_writeup.docx  regularize-cv.py
ECE_20875/homework-9-f22-roshsundar/: README.md  cluster.py  (+3 more)
ECE_26400/: README.md
ECE_270/: README.md
ECE_337/: README.md
ECE_362/: README.md
ECE_368/: README.md
ECE_40862/: README.md
ECE_463/: README.md
ECE_469/: README.md
ECE_477/: README.md
ECE_477/Software/ECE477-SSS-main/SSS_Firmware/main/: CMakeLists.txt  adc_functions.c  adc_functions.h  constants.h  coulomb_counting.c  coulomb_counting.h  i2c_functions.c  i2c_functions.h  interrupt_functions.c  interrupt_functions.h  main.c  networking.c  networking.h  occupancy_functions.c  occupancy_functions.h
ECE_570/: README.MD
ENGR_133/: README
(+732 files in other folders)
