idf_component_register(SRCS "networking.c" "main.c"
                            "adc_functions.c"
                            "i2c_functions.c"
                            "occupancy_functions.c"
                            "interrupt_functions.c"
                            "coulomb_counting.c"
                            "networking.c"
                    INCLUDE_DIRS ".")
